--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,15 @@
 ---
-title: "My Website"
+title: "David's Website"
 ---
 
 Hello, Website!
+
+$$
+   f(k) = {n \choose k} p^{k} (1-p)^{n-k}
+$$
+
+$$
+\Theta = \begin{pmatrix}\alpha & \beta\\
+\gamma & \delta
+\end{pmatrix}
+$$
