--- a/yieldcurve.Rmd
+++ b/yieldcurve.Rmd
@@ -6,11 +6,34 @@ title: "Yield Curve"
 ```{r, include=FALSE}
 suppressMessages(library(quantmod))
 suppressMessages(library(Quandl))
+suppressMessages(library(ggplot2))
+suppressMessages(library(lubridate))
+suppressMessages(library(tidyverse))
+
 yc <- Quandl("USTREASURY/YIELD", api_key="NGPKkZ6sdNZyx6GeaVZT")
-y <- yc[1,-1]
-x <- c(1/12, 2/12, 3/12, 6/12, 1, 2, 3, 5, 7, 10, 20, 30)
+colnames(yc) <- c("date", 
+                  "M1", "M2", "M3", "M6", 
+                  "Y1", "Y2", "Y3", "Y5", "Y7", "Y10", "Y20", "Y30")  
+yc <- data.frame(yc) %>% arrange(date)
+
+yend <- which(diff(yday(yc$date)) < 0) 
+yend <- c(yend, dim(yc)[1])
+y    <- yc[yend,] %>% 
+   top_n(3, wt=date) %>% 
+   pivot_longer(cols      = starts_with(c("M", "Y")),
+                names_to = "maturity") 
+
+ymonthly <- grep("M", y$maturity)
+maturity <- parse_number(y$maturity)
+maturity[ymonthly] <- maturity[ymonthly] / 12
+y <- y %>% select(-maturity)
+y <- y %>% add_column(maturity) %>% mutate(date=as.character(date))
+   
 ```
 
 ```{r, echo=FALSE}
-plot(x, y, type='l', main="Yield Curve", xlab="Maturity", ylab="Rate")
+ggplot(y, aes(x=maturity, y=value, col=date)) + 
+   geom_line()  +
+   xlab("Maturity (years)") +
+   ylab("Rate (%)")
 ```
