--- a/yieldcurve.Rmd
+++ b/yieldcurve.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Yield Curve"
+title: "Interest Rates"
 ---
 
 
@@ -11,28 +11,50 @@ suppressMessages(library(lubridate))
 suppressMessages(library(tidyverse))
 
 yc <- Quandl("USTREASURY/YIELD", api_key="NGPKkZ6sdNZyx6GeaVZT")
-colnames(yc) <- c("date", 
-                  "M1", "M2", "M3", "M6", 
-                  "Y1", "Y2", "Y3", "Y5", "Y7", "Y10", "Y20", "Y30")  
-yc <- data.frame(yc) %>% arrange(date)
+colnames(yc) <- c("date",
+                  "M1", "M2", "M3", "M6",
+                  "Y1", "Y2", "Y3", "Y5", "Y7", "Y10", "Y20", "Y30")
+yc <- data.frame(yc) %>%
+   arrange(date) %>%
+   mutate(spread = Y10 - Y1) %>%
+   filter(date >= "2017-01-01")
 
-yend <- which(diff(yday(yc$date)) < 0) 
+yend <- which(diff(yday(yc$date)) < 0)
 yend <- c(yend, dim(yc)[1])
-y    <- yc[yend,] %>% 
-   top_n(3, wt=date) %>% 
-   pivot_longer(cols      = starts_with(c("M", "Y")),
-                names_to = "maturity") 
+y    <- yc[yend,] %>%
+   top_n(3, wt=date) %>%
+   pivot_longer(cols     = starts_with(c("M", "Y")),
+                names_to = "maturity")
 
 ymonthly <- grep("M", y$maturity)
 maturity <- parse_number(y$maturity)
 maturity[ymonthly] <- maturity[ymonthly] / 12
 y <- y %>% select(-maturity)
 y <- y %>% add_column(maturity) %>% mutate(date=as.character(date))
-   
 ```
 
+## The Three-Month Treasury Bill Rate
+
 ```{r, echo=FALSE}
-ggplot(y, aes(x=maturity, y=value, col=date)) + 
+ggplot(yc, aes(x=date, y=M3)) +
+   geom_line()  +
+   xlab("Date") +
+   ylab("Three-Month Treasury Bill Rate (%)")
+```
+
+## The Treasury Yield Spread
+
+```{r, echo=FALSE}
+ggplot(yc, aes(x=date, y=spread)) +
+   geom_line()  +
+   xlab("Date") +
+   ylab("Treasury Yield Spread (10-year minus 1-year)")
+```
+
+## The Yield Curve (Current and Previous Two Year Ends)
+
+```{r, echo=FALSE}
+ggplot(y, aes(x=maturity, y=value, col=date)) +
    geom_line()  +
    xlab("Maturity (years)") +
    ylab("Rate (%)")
