--- a/index.Rmd
+++ b/index.Rmd
@@ -21,3 +21,10 @@ title: Home
       - [Consumer Discretionary](sector-consumer-discretionary.html)
       - [Consumer Staples](sector-consumer-staples.html)
       - [Energy](sector-energy.html)
+      - [Financials](sector-financials.html)
+      - [Health Care](sector-health-care.html)
+      - [Industrials](sector-industrials.html)
+      - [Information Technology](sector-information-technology.html)
+      - [Materials](sector-materials.html)
+      - [Real Estate](sector-real-estate.html)
+      - [Utilities](sector-utilities.html)
