--- a/sector-information-technology.Rmd
+++ b/sector-information-technology.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Energy Sector"
+title: "Information Technology Sector"
 output: html_document
 ---
 
@@ -7,7 +7,7 @@ output: html_document
 ```
 
 ```{r, echo=FALSE}
-k <- 4
+k <- 8
 ```
 
 ```{r, child="/base/inv/data/sectors/part1.Rmd"}
